[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Sourced/Backgrounds/parallax_mountain_pack/layers/parallax-mountain-montain-far.png" type="Texture" id=1]
[ext_resource path="res://Themes/Main.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sourced/Backgrounds/parallax_mountain_pack/layers/parallax-mountain-bg.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sourced/Backgrounds/parallax_mountain_pack/layers/parallax-mountain-mountains.png" type="Texture" id=5]
[ext_resource path="res://Scenes/BattleInterface/BattleInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/DeadPanel/DeadPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Managers/Levels/LevelManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/Levels/Level13/TheTwins.tres" type="Resource" id=9]
[ext_resource path="res://Resources/Weighted/LevelList/Level03/Level03List.tres" type="Resource" id=10]
[ext_resource path="res://Resources/Levels/Level13/ButcherShop.tres" type="Resource" id=11]
[ext_resource path="res://Resources/Weighted/LevelList/Level05/Level05List.tres" type="Resource" id=12]
[ext_resource path="res://Resources/Levels/Level06/BratPair.tres" type="Resource" id=13]
[ext_resource path="res://Resources/Weighted/LevelList/Level01/Level01List.tres" type="Resource" id=14]
[ext_resource path="res://Resources/Weighted/LevelList/Level04/Level04List.tres" type="Resource" id=15]
[ext_resource path="res://Resources/Weighted/LevelList/Level11/Level11List.tres" type="Resource" id=16]
[ext_resource path="res://Resources/Weighted/LevelList/Level06/Level06List.tres" type="Resource" id=17]
[ext_resource path="res://Resources/Weighted/LevelList/Level07/Level07List.tres" type="Resource" id=18]
[ext_resource path="res://Themes/StyleBoxes/ShadowStyleBox.tres" type="StyleBox" id=19]
[ext_resource path="res://Resources/Weighted/LevelList/Level09/Level09List.tres" type="Resource" id=20]
[ext_resource path="res://Resources/Weighted/LevelList/Level12/Level12List.tres" type="Resource" id=21]
[ext_resource path="res://Resources/Weighted/LevelList/Level02/Level02List.tres" type="Resource" id=22]
[ext_resource path="res://Resources/Weighted/LevelList/Level08/Level08List.tres" type="Resource" id=23]
[ext_resource path="res://Resources/Weighted/LevelList/Level10/Level10List.tres" type="Resource" id=24]
[ext_resource path="res://Resources/Weighted/LevelList/Level13/Level13List.tres" type="Resource" id=25]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.533333, 0.364706, 0.513726, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MountainsBackground" type="TextureRect" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -205.0
margin_bottom = -45.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MountainsForeground" type="TextureRect" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -160.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleInterfaceContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleInterface" parent="BattleInterfaceContainer" instance=ExtResource( 6 )]

[node name="ShadowPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadPanel" parent="." instance=ExtResource( 7 )]
visible = false
mouse_filter = 2

[node name="CampaignInterfaceContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckViewContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelManager" parent="." instance=ExtResource( 8 )]
levels = [ ExtResource( 14 ), ExtResource( 22 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 25 ) ]

[node name="TestLevelManager" parent="." instance=ExtResource( 8 )]
levels = [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 9 ) ]
[connection signal="player_lost" from="BattleInterfaceContainer/BattleInterface" to="." method="_on_BattleInterface_player_lost"]
[connection signal="player_won" from="BattleInterfaceContainer/BattleInterface" to="." method="_on_BattleInterface_player_won"]
[connection signal="view_deck_pressed" from="BattleInterfaceContainer/BattleInterface" to="." method="_on_BattleInterface_view_deck_pressed"]
[connection signal="retry_pressed" from="DeadPanel" to="." method="_on_DeadPanel_retry_pressed"]
